--- a/index.html
+++ b/index.html
@@ -58,10 +58,9 @@
                     <li><a href="#relfrag">Relative with Fragment</a></li> <!-- link this to the relative with fragment links section -->
                 </ul>
 
-                <!-- TO DO: ADD AN ABSOLUTE LINK TO THE ASU WEBSITE FROM THE TEXT ASU.EDU BELOW, AND INCLUDE THE ATTRIBUTE THAT WILL MAKE THIS LINK OPEN IN A NEW TAB -->
                 <section id="abs">
                     <h3>Absolute Hyperlinks</h3>
-                    <p>Absolute hyperlinks are used when links are needed to another website. You would use an absolute link if you wanted to code a link on your website to <a href="https://asu.edu" target="_blank">asu.edu</a>.</p>
+                    <p>Absolute hyperlinks are used when links are needed to another website. You would use an absolute link if you wanted to code a link on your website to <a href="https://asu.edu" target="_blank">asu.edu</a>, and you could use the target attribute to tell that link to open in a new tab (this can cause issues with accessibility, though).</p>
                 </section>
 
                 <section id="rel">
@@ -72,8 +71,8 @@
                 <!-- TO DO: ADD AN EMAIL LINK TO THIS SECTION, USING YOUR ASU EMAIL AND REPLACING THE TEXT YOUREMAIL@ASU.EDU -->
                 <section id="email">
                     <h3>E-Mail Hyperlinks</h3>
-                    <p>Email hyperlinks will automatically launch the user's default mail program. Unfortunately, sites that have coded email hyperlinks may have an issue with spam. The trend today is to use contact forms rather than email addresses, or include the address in the website as content rather than an email link. However, for practice, code your name linking to your ASU email address here: youremail@asu.edu</p>
-                </section>
+                    <p>Email hyperlinks will automatically launch the user's default mail program. Unfortunately, sites that have coded email hyperlinks may have an issue with spam. The trend today is to use contact forms rather than email addresses, or include the address in the website as content rather than an email link. However, for practice, code your name linking to your ASU email address here: <a href="mailto:dmwatso08@asu.edu">Dylan Watson</a></p>
+                </section
 
                 <section id="tel">
                     <h3>Telephone Number Hyperlinks</h3>
@@ -108,11 +107,11 @@
 
                 <!-- TO DO: MAKE THE PHONE NUMBER AND EMAIL ADDRESS BELOW INTO PROPERLY FORMATTED LINKS INSIDE OF THE ADDRESS TAG -->
                 <address>
-                    (555) 555-5555
-                    Email Jessica Barnett
+                 <a href="tel:(555) 555-5555">(555) 555-5555</a>
+                 <a href="mailto:jessica.barnett@asu.edu">Email Jessica Barnett</a>
                 </address>
                 <!-- TO DO: COMPLETE THE LINK BELOW SO THAT IT WILL TAKE THE USER TO THE CONTACT SECTION ON THE CONTACT PAGE WHEN CLICKED -->
-                <p>You can also <a href="#">contact us by filling out the contact form on our site</a>.</p>
+                <p>You can also <a href="contact.html#contact">contact us by filling out the contact form on our site</a>.</p>
             </section>
             <p>Copyright &copy; 2023 - GIT215 - Prof. Barnett</p>
         </footer>
